--- a/style.css
+++ b/style.css
@@ -25,3 +25,16 @@ footer {
     background: #222;
     color: white;
 }
+.cv-button {
+    display: inline-block;
+    padding: 12px 20px;
+    background-color: #007BFF;
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: 600;
+}
+
+.cv-button:hover {
+    background-color: #0056b3;
+}
